# raystuff

./: CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json
.cache/clangd/index/: glad.c.A8EF9DF968CD89C6.idx  glad.h.B8D022C9DA15F495.idx  main.c.CA43EE74252A1F01.idx  raygui.h.A5CEF01DF3806150.idx
cpp/: CMakeLists.txt
cpp/boid/: CMakeLists.txt
cpp/boid/res/shaders/simple/: instancedtri.frag  instancedtri.vs  simpletri.frag  simpletri.vs
cpp/boid/src/: AbstractBoidSimulator.cpp  AbstractBoidSimulator.h  BoidSimulationSettings.h  CMakeLists.txt  GridBoidSimulation.cpp  GridBoidSimulation.h  SimpleBoidSimulation.cpp  SimpleBoidSimulation.h  main.cpp
cpp/boid/test/: CMakeLists.txt
cpp/boid/test/src/: example.cpp
cpp/example/: CMakeLists.txt
cpp/example/src/: CMakeLists.txt  main.cpp
cpp/example/test/: CMakeLists.txt
cpp/mug-include/: InstancedCircles.h  InstancedTriangles.h  MugEngine.hpp  SimplePoint.h
cpp/mugengine/: .gitignore  CMakeLists.txt
cpp/mugengine/glad/: CMakeLists.txt  glad.c
cpp/mugengine/glad/include/glad/: glad.h
cpp/mugengine/include/: MugEngine.hpp  MugLogger.hpp  MugShader.hpp  SimpleTriangle.h
cpp/mugengine/src/: CMakeLists.txt  MugEngine.cpp  MugEngine.hpp  MugShader.cpp  MugShader.h  mugengine.cpp  mugengine.hpp
cpp/mugengine/src/imgui/: MugImGuiStuff.cpp  MugImGuiStuff.h
cpp/mugengine/src/render/simple/: InstancedTriangles.cpp  InstancedTriangles.h  MugInstanceTriangleFan.cpp  MugInstanceTriangleFan.h  SimplePoint.h  SimpleTriangle.cpp  SimpleTriangle.h
cpp/mugengine/src/shaders/: MugShader.cpp  MugShader.hpp  ShaderManager.cpp  ShaderManager.h
cpp/mugengine/src/util/: MugLogger.cpp  PairHelpers.h  RGBAColor.h
cpp/mugengine/test/: CMakeLists.txt
cpp/rdp/: CMakeLists.txt
cpp/rdp/res/shaders/simple/: simpletri.frag
cpp/rdp/src/: main.cpp
cpp/rdp/test/: CMakeLists.txt
craw/: CMakeLists.txt  compile_commands.json
craw/lib/: glad.c
craw/oldsrc/: particledemo.c
craw/resources/shaders/glsl/: point_particle.fs  simpleshader.fs  simpleshader.vs
craw/src/: main.c  mug_simple_rectangle_engine.c  mug_simple_rectangle_engine.h  mugrectangle.h
include/glad/: glad.h
oldsrc/: rawopenglexample.c
resources/shaders/glsl/: point_particle.vs
src/: main.c  mug_simple_rectangle_engine.c  mug_simple_rectangle_engine.h  mugmanager.c  mugmanager.h  mugpoint3.c  mugpoint3.h  mugrectangle.c  mugrectangle.h
